<resources>
    <string name="app_name">RewardsApp</string>
    <string name="saved_water_wave">Saved Water Wave</string>
    <string name="water_progress_ring">Water Progress</string>
    <string name="points_counter">Point Counter</string>
    <string name="available_points_pre">You have</string>
    <string name="available_points_post">points available</string>
    <string name="water_wave_pre">You have saved</string>
    <string name="redeem_now">REDEEM NOW</string>
    <string name="enter_firstname">First Name</string>
    <string name="enter_lastname">Last Name</string>
    <string name="enter_phone">Phone Number</string>
    <string name="enter_email">Email</string>
    <string name="enter_address">Home Address</string>
    <string name="enter_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="login">Sign In</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="about_caption">Rewarding you for saving our precious water</string>
    <string name="about_part1">At South East Water we want to reward you for saving water. Every drop you save makes a difference to our rivers, streams and the environment.</string>
    <string name="about_part2">For every litre of water that your household saves you are awarded a credit point. You can redeem these points in the form of discounts off products in our store.</string>

    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>

    <string-array name="state_array">
        <item>VIC</item>
        <item>NT</item>
        <item>NSW</item>
        <item>TAS</item>
        <item>ACT</item>
        <item>QLD</item>
        <item>WA</item>
        <item>SA</item>
    </string-array>

</resources>
