<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        app:srcCompat="@mipmap/sew_rewards_logo" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="@dimen/login_field_width"
        android:layout_height="@dimen/login_field_height"
        android:layout_alignEnd="@+id/imageView"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="48dp"
        android:background="@color/colorWhite"
        android:hint="@string/enter_firstname"
        android:inputType="textPersonName"
        android:textSize="@dimen/login_text_size" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="@dimen/login_field_width"
        android:layout_height="@dimen/login_field_height"
        android:layout_alignStart="@+id/first_name"
        android:layout_below="@+id/first_name"
        android:layout_marginTop="@dimen/register_text_margin"
        android:background="@color/colorWhite"
        android:hint="@string/enter_lastname"
        android:inputType="textPersonName"
        android:textSize="@dimen/login_text_size" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="@dimen/login_field_width"
        android:layout_height="@dimen/login_field_height"
        android:layout_alignStart="@+id/last_name"
        android:layout_below="@+id/last_name"
        android:layout_marginTop="@dimen/register_text_margin"
        android:background="@color/colorWhite"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:textSize="@dimen/login_text_size" />

    <EditText
        android:id="@+id/email"
        android:layout_width="@dimen/login_field_width"
        android:layout_height="@dimen/login_field_height"
        android:layout_alignStart="@+id/phone_number"
        android:layout_below="@+id/phone_number"
        android:layout_marginTop="@dimen/register_text_margin"
        android:background="@color/colorWhite"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/login_text_size" />

    <EditText
        android:id="@+id/address"
        android:layout_width="@dimen/login_field_width"
        android:layout_height="@dimen/login_field_height"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="@dimen/register_text_margin"
        android:background="@color/colorWhite"
        android:hint="@string/enter_address"
        android:inputType="text"
        android:textSize="@dimen/login_text_size" />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/login_field_width"
        android:layout_height="@dimen/login_field_height"
        android:layout_alignStart="@+id/address"
        android:layout_below="@+id/address"
        android:layout_marginTop="@dimen/register_text_margin"
        android:background="@color/colorWhite"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textSize="@dimen/login_text_size" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="22dp"
        android:background="@color/colorGrey"
        android:onClick="signIn"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/login_text_size"
        android:typeface="normal" />

    <ImageView
        android:id="@+id/first_name_icon"
        android:layout_width="@dimen/icon_length"
        android:layout_height="@dimen/icon_length"
        android:layout_alignTop="@+id/first_name"
        android:layout_toStartOf="@+id/first_name"
        android:background="@color/colorWhite"
        app:srcCompat="@mipmap/name_icon" />

    <ImageView
        android:id="@+id/last_name_icon"
        android:layout_width="@dimen/icon_length"
        android:layout_height="@dimen/icon_length"
        android:layout_alignTop="@+id/last_name"
        android:layout_toStartOf="@+id/last_name"
        android:background="@color/colorWhite"
        app:srcCompat="@mipmap/name_icon" />


    <ImageView
        android:id="@+id/phone_icon"
        android:layout_width="@dimen/icon_length"
        android:layout_height="@dimen/icon_length"
        android:layout_alignTop="@+id/phone_number"
        android:layout_toStartOf="@+id/phone_number"
        android:background="@color/colorWhite"
        app:srcCompat="@mipmap/phone_icon" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="@dimen/icon_length"
        android:layout_height="@dimen/icon_length"
        android:layout_alignTop="@+id/email"
        android:layout_toStartOf="@+id/email"
        android:background="@color/colorWhite"
        app:srcCompat="@mipmap/email_icon" />

    <ImageView
        android:id="@+id/address_icon"
        android:layout_width="@dimen/icon_length"
        android:layout_height="@dimen/icon_length"
        android:layout_alignTop="@+id/address"
        android:layout_toStartOf="@+id/address"
        android:background="@color/colorWhite"
        app:srcCompat="@mipmap/address_icon" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="@dimen/icon_length"
        android:layout_height="@dimen/icon_length"
        android:layout_alignTop="@+id/password"
        android:layout_toStartOf="@+id/password"
        android:background="@color/colorWhite"
        app:srcCompat="@mipmap/password_icon" />
</RelativeLayout>