<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey">

    <TextView
        android:id="@+id/point_counter"
        android:layout_width="220dp"
        android:layout_height="230dp"
        android:layout_alignTop="@+id/avl_point_pre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/oswald_light"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorLight"
        android:textDirection="ltr"
        android:textSize="175sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/avl_point_pre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:fontFamily="@font/abel"
        android:text="@string/available_points_pre"
        android:textColor="@color/colorWhite"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/avl_point_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/point_counter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:fontFamily="@font/abel"
        android:text="@string/available_points_post"
        android:textColor="@color/colorWhite"
        android:textSize="26sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/point_counter"
        android:layout_marginBottom="26dp"
        android:background="@drawable/button"
        android:text="@string/redeem_now"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />
</RelativeLayout>