<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@mipmap/sew_rewards_logo" />


    <EditText
        android:id="@+id/email"
        android:layout_width="@dimen/login_field_width"
        android:layout_height="@dimen/login_field_height"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:background="@color/colorWhite"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/login_text_size" />


    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/login_field_width"
        android:layout_height="@dimen/login_field_height"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="18dp"
        android:background="@color/colorWhite"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/icon_length"
        android:layout_height="@dimen/icon_length"
        android:layout_alignTop="@+id/email"
        android:layout_toStartOf="@+id/email"
        android:background="@color/colorWhite"
        app:srcCompat="@mipmap/name_icon" />

    <Button
        android:id="@+id/register_from_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@+id/password"
        android:layout_marginTop="40dp"
        android:background="@color/colorGrey"
        android:onClick="registerNewUser"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/login_text_size"
        android:typeface="normal" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/icon_length"
        android:layout_height="@dimen/icon_length"
        android:layout_alignTop="@+id/password"
        android:layout_toStartOf="@+id/password"
        android:background="@color/colorWhite"
        app:srcCompat="@mipmap/password_icon" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/register_from_login"
        android:layout_alignBottom="@+id/register_from_login"
        android:layout_alignEnd="@+id/imageView"
        android:background="@color/colorGrey"
        android:onClick="signIn"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorLight"
        android:textSize="@dimen/login_text_size"
        android:typeface="normal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:text="Forgot password?"
        android:textColor="@color/colorLight" />


</RelativeLayout>